--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
     <h1>About</h1>
     <h3 class="Introduction">Meet Fredrica</h3>
     <img
-      src="/Images/WhatsApp Image 2022-04-07 at 6.21.09 AM.jpeg"
+      src="Images/WhatsApp Image 2022-04-07 at 6.21.09 AM.jpeg"
       class="Introduction-Picture"
       alt="A girl sitting and smiling"
     />
