--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,7 +22,7 @@
     <br />
       <div class="Gallery-coloumn">
         <img
-          src="/Images/WhatsApp Image 2022-04-07 at 6.21.09 AM.jpeg"
+          src="Images/WhatsApp Image 2022-04-07 at 6.21.09 AM.jpeg"
           alt="Girl Sitting and smiling"
         />
         <img
@@ -37,7 +37,7 @@
 
       <div class="Gallery-coloumn">
         <img
-          src="/Images/WhatsApp Image 2022-04-07 at 8.29.24 AM.jpeg"
+          src="Images/WhatsApp Image 2022-04-07 at 8.29.24 AM.jpeg"
           alt="Girl smiling standing by window"
         />
         <img
@@ -52,7 +52,7 @@
 
       <div class="Gallery-coloumn">
         <img
-          src="/Images/WhatsApp Image 2022-04-07 at 8.30.39 AM.jpeg"
+          src="Images/WhatsApp Image 2022-04-07 at 8.30.39 AM.jpeg"
           alt="A girl smiling"
         />
         <img
