--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul class="Navigation-Bar">
-        <li><a href="Home.html" class="Navigation-Menu"> Home</a></li>
+        <li><a href="index.html" class="Navigation-Menu"> Home</a></li>
         <li><a href="About.html" class="Navigation-Menu"> About</a></li>
         <li><a href="Portfolio.html" class="Navigation-Menu"> Portfolio</a></li>
         <li>
